proyecto bootstasp e-commerce

--- a/index.html
+++ b/index.html
@@ -2,142 +2,154 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>E-Commerce</title>
-    <!-- boostrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
-    <!-- css -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>E-Commerce</title>
+  <!-- boostrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- font Awesome  -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- css -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="bienvenidos">
-        <header class="encabezado">
-            <nav class="navbar navbar-expand-md navbar-dark bg-dark align-items-center">
-                <p class="mb-0">E-Commerce</p>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-                    aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Canasta</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Salir</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-    </section>
-    <section class="buscar">
-        <div class="container">
-            <form action="#" id="bloque-buscar">
-                <div class="contenedor-bloque-buscar">
-                    <input type="text" placeholder="Buscar Camisetas">
-                    <input type="button" value="Buscar">
-                </div>
-            </form>
+  <section class="bienvenidos">
+    <header class="encabezado">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark align-items-center">
+        <p class="mb-0">E-Commerce</p>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Canasta</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Salir</a>
+            </li>
+          </ul>
         </div>
-    </section>
-    <section class="carrusel">
-        <div class="container">
-            <div class="row">
-                <div>
-                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/banner-slider-1.jpg"
-                                    class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/banner-slider-2.jpg"
-                                    class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/banner-slider-3.jpg"
-                                    class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
-                </div>
+      </nav>
+    </header>
+  </section>
+  <section class="buscar">
+    <div class="container">
+      <form action="#" id="bloque-buscar">
+        <div class="contenedor-bloque-buscar">
+          <input type="text" placeholder="Buscar Camisetas">
+          <input type="button" value="Buscar">
+        </div>
+      </form>
+    </div>
+  </section>
+  <section class="carrusel">
+    <div class="container">
+      <div class="row">
+        <div>
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/banner-slider-1.jpg"
+                  class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/banner-slider-2.jpg"
+                  class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/banner-slider-3.jpg"
+                  class="d-block w-100" alt="...">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
-    </section>
-    <section class="camisetas">
-        <div class="container">
-            <div class="row">
-                <div class="card col-5" style="width: 18rem;">
-                    <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-                <div class="card col-5" style="width: 18rem;">
-                    <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-2.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-                <div class="card col-5" style="width: 18rem;">
-                    <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-3.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-                <div class="card col-5" style="width: 18rem;">
-                    <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-4.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-                <div class="card col-5" style="width: 18rem;">
-                    <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-5.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
+      </div>
+    </div>
+  </section>
+  <section class="camisetas">
+    <div class="container">
+      <div class="row">
+        <div class="card col-sm-5" style="width: 18rem;">
+          <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-1.jpg" class="card-img-top"
+            alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Hipster Ultimate</h5>
+            <p class="card-text">La camiseta ideal para hipsters.</p>
+            <a href="#" class="btn btn-primary btn-sm">$229<i class="fas fa-shopping-cart"></i></a>
+            <a href="#" class="btn btn-outline-secondary btn-sm">Detalles</a>
+          </div>
         </div>
+        <div class="card col-sm-5" style="width: 18rem;">
+          <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-2.jpg" class="card-img-top"
+            alt="...">
+          <div class="card-body">
+            <h5 class="card-title">On Motion Live</h5>
+            <p class="card-text">Perfecta para salidas rocosas.</p>
+            <a href="#" class="btn btn-primary btn-sm">$229<i class="fas fa-shopping-cart"></i></a>
+            <a href="#" class="btn btn-outline-secondary btn-sm">Detalles</a>
+          </div>
+        </div>
+        <div class="card col-sm-5" style="width: 18rem;">
+          <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-3.jpg" class="card-img-top"
+            alt="...">
+          <div class="card-body">
+            <h5 class="card-title">On Motion Live</h5>
+            <p class="card-text">Perfecta para salidas rocosas.</p>
+            <a href="#" class="btn btn-primary btn-sm">$229<i class="fas fa-shopping-cart"></i></a>
+            <a href="#" class="btn btn-outline-secondary btn-sm">Detalles</a>
+          </div>
+        </div>
+        <div class="card col-sm-5" style="width: 18rem;">
+          <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-4.jpg" class="card-img-top"
+            alt="...">
+          <div class="card-body">
+            <h5 class="card-title">On Motion Live</h5>
+            <p class="card-text">Perfecta para salidas rocosas.</p>
+            <a href="#" class="btn btn-primary btn-sm">$229<i class="fas fa-shopping-cart"></i></a>
+            <a href="#" class="btn btn-outline-secondary btn-sm">Detalles</a>
+          </div>
+        </div>
+        <div class="card col-sm-5" style="width: 18rem;">
+          <img src="https://s3.amazonaws.com/makeitreal/projects/e-commerce/camiseta-5.jpg" class="card-img-top"
+            alt="...">
+          <div class="card-body">
+            <h5 class="card-title">On Motion Live</h5>
+            <p class="card-text">Perfecta para salidas rocosas.</p>
+            <a href="#" class="btn btn-primary btn-sm">$229<i class="fas fa-shopping-cart"></i></a>
+            <a href="#" class="btn btn-outline-secondary btn-sm">Detalles</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    </section>
+  </section>
 
 
-    <!-- js boostrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+  <!-- js boostrap -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
