--- a/index.html
+++ b/index.html
@@ -17,33 +17,31 @@
 </head>
 
 <body>
-  <section class="bienvenidos">
-    <header class="encabezado">
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark align-items-center">
-        <p class="mb-0">E-Commerce</p>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Canasta</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Salir</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-  </section>
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <p class="mb-0">E-Commerce</p>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+      aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> Canasta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Salir</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <section class="buscar">
     <div class="container">
       <form action="#" id="bloque-buscar">
         <div class="contenedor-bloque-buscar">
           <input type="text" placeholder="Buscar Camisetas">
-          <input type="button" value="Buscar">
+          <button type="submit"><i class="fas fa-search"></i></button>
         </div>
       </form>
     </div>
